tests/NormalTests/paczka1/small_fuzzy/61922410.err
Error in line 1: KkSz S963 72,6
Error in line 3: 0Sl S883 7,0
Error in line 2: KkSz S591 0,7
